--- a/sistema/site/public/index.html
+++ b/sistema/site/public/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <div class="header">
+    <div class="header" id="header">
         <div class="container">
             <h1 class="titulo">Rocket League</h1>
             <ul class="navbar">
