--- a/sistema/site/public/cadastro.html
+++ b/sistema/site/public/cadastro.html
@@ -47,7 +47,7 @@
     </div>
     <div class="title">Cadastro</div>
     <div class="content">
-      <form action="#">
+      <form action="#" id="form_postagem">
         <div class="user-details">
           <div class="input-box">
             <span class="details">Nome</span>
