--- a/sistema/site/public/dashboard.html
+++ b/sistema/site/public/dashboard.html
@@ -7,6 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dashboard</title>
     <link rel="stylesheet" href="css/dash.css" />
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/dashboards.css">
+    <script src="js/alerta.js"></script>
+    <script src="js/sessao.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="shortcut icon" href="assets/icon/rocket-league.svg" type="image/x-icon">
     <!-- Fontawesome CDN Link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" />
@@ -45,7 +50,19 @@
     </nav>
 
     <main class="main">
-        <h1>Avaliações por jogador e time</h1>
+        <h1>Dashboard</h1>
+
+        <div>
+            <div>
+                <h1>Quantidade total de avaliações por jogador</h1>
+                <canvas id="myChart"></canvas>
+            </div>
+
+            <div>
+                <h1>Quantidade total de votos por jogador</h1>
+                <canvas id="myChart2"></canvas>
+            </div>
+        </div>
     </main>
 
 </body>
@@ -57,4 +74,237 @@
     const sidebarClose = document.querySelector("#sidebar-close");
 
     sidebarClose.addEventListener("click", () => sidebar.classList.toggle("close"));
+
+    b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
+
+    let proximaAtualizacao;
+
+    window.onload = obterDadosGrafico(), obterGraficoJogador();
+
+    function obterDadosGrafico(idAvaliacao) {
+
+        if (proximaAtualizacao != undefined) {
+            clearTimeout(proximaAtualizacao);
+        }
+
+        fetch(`/medidas/ultimas/${idAvaliacao}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (resposta) {
+                    console.log(`Dados recebidos: ${JSON.stringify(resposta)}`);
+                    resposta.reverse();
+
+                    plotarGrafico(resposta, idAvaliacao);
+
+                });
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+            }
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+    }
+
+    function obterGraficoJogador(idUsuario) {
+
+        if (proximaAtualizacao != undefined) {
+            clearTimeout(proximaAtualizacao);
+        }
+
+        fetch(`/medidas/jogador/${idUsuario}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (respostaJogador) {
+                    console.log(`Dados recebidos: ${JSON.stringify(respostaJogador)}`);
+
+                    plotarGrafico2(respostaJogador, idUsuario);
+                });
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+            }
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+    }
+
+
+
+    function plotarGrafico(resposta, idAvaliacao) {
+
+        console.log('iniciando plotagem do gráfico...');
+
+        // Criando estrutura para plotar gráfico - labels
+        let labels = [];
+
+        // Criando estrutura para plotar gráfico - dados
+        let dados = {
+            labels: labels,
+            datasets: [{
+                label: '',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(75, 192, 192)',
+                tension: 0.1
+            },
+            {
+                label: 'Quantidade de Avaliações',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(199, 52, 52)',
+                tension: 0.1
+            }]
+        };
+
+        console.log('----------------------------------------------')
+        console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
+        console.log(resposta)
+
+        // Inserindo valores recebidos em estrutura para plotar o gráfico
+        for (i = 0; i < resposta.length; i++) {
+            var registro = resposta[i];
+            labels.push(registro.NomeJogador);
+            dados.datasets[0].data.push(registro.NomeJogador);
+            dados.datasets[1].data.push(registro.TotalJogador);
+        }
+
+        console.log('----------------------------------------------')
+        console.log('O gráfico será plotado com os respectivos valores:')
+        console.log('Labels:')
+        console.log(labels)
+        console.log('Dados:')
+        console.log(dados.datasets)
+        console.log('----------------------------------------------')
+
+        // Criando estrutura para plotar gráfico - config
+        const config = {
+            type: 'bar',
+            data: dados,
+        };
+
+        // Adicionando gráfico criado em div na tela
+        let myChart = new Chart(
+            document.getElementById(`myChart`),
+            config
+        );
+
+        setTimeout(() => atualizarGrafico(idAvaliacao, dados, myChart), 2000);
+    }
+
+    function plotarGrafico2(respostaJogador, idUsuario) {
+
+        console.log('iniciando plotagem do gráfico...');
+
+        // Criando estrutura para plotar gráfico - labels
+        let labels = [];
+
+        // Criando estrutura para plotar gráfico - dados
+        let dados = {
+            labels: labels,
+            datasets: [{
+                label: '',
+                data: [],
+                fill: false,
+                tension: 0.1
+            },
+            {
+                label: 'Quantidade de votos',
+                data: [],
+                fill: false,
+                borderColor: 'rgb(199, 52, 52)',
+                backgroundColor: ['#b80000'],
+                tension: 0.1
+            }]
+        };
+
+        console.log('----------------------------------------------')
+        console.log('Estes dados foram recebidos pela funcao "obterDadosGrafico" e passados para "plotarGrafico":')
+        console.log(respostaJogador)
+
+        // Inserindo valores recebidos em estrutura para plotar o gráfico
+        for (i = 0; i < respostaJogador.length; i++) {
+            var registro = respostaJogador[i];
+            labels.push(registro.NomeJogador);
+            dados.datasets[0].data.push(registro.NomeJogador);
+            dados.datasets[1].data.push(registro.TotalVotos);
+        }
+
+        console.log('----------------------------------------------')
+        console.log('O gráfico será plotado com os respectivos valores:')
+        console.log('Labels:')
+        console.log(labels)
+        console.log('Dados:')
+        console.log(dados.datasets)
+        console.log('----------------------------------------------')
+
+        // Criando estrutura para plotar gráfico - config
+        const config = {
+            type: 'bar',
+            data: dados,
+        };
+
+        // Adicionando gráfico criado em div na tela
+        let myChart = new Chart(
+            document.getElementById(`myChart2`),
+            config
+        );
+
+        setTimeout(() => atualizarGrafico(idUsuario, dados, myChart), 2000);
+    }
+
+    function atualizarGrafico(idAvaliacao, dados, myChart) {
+
+        fetch(`/medidas/tempo-real/${idAvaliacao}`, { cache: 'no-store' }).then(function (response) {
+            if (response.ok) {
+                response.json().then(function (novoRegistro) {
+
+                    obterdados(idAvaliacao);
+                    // alertar(novoRegistro, idAvaliacao);
+                    console.log(`Dados recebidos: ${JSON.stringify(novoRegistro)}`);
+                    console.log(`Dados atuais do gráfico:`);
+                    console.log(dados);
+
+                    let avisoCaptura = document.getElementById(`avisoCaptura${idAvaliacao}`)
+                    avisoCaptura.innerHTML = ""
+
+
+                    if (novoRegistro[0].Jogador == dados.labels[dados.labels.length - 1]) {
+                        console.log("---------------------------------------------------------------")
+                        console.log("Como não há dados novos para captura, o gráfico não atualizará.")
+                        avisoCaptura.innerHTML = "<i class='fa-solid fa-triangle-exclamation'></i> Foi trazido o dado mais atual capturado pelo sensor. <br> Como não há dados novos a exibir, o gráfico não atualizará."
+                        console.log("Horário do novo dado capturado:")
+                        console.log(novoRegistro[0].NomeJogador)
+                        console.log("Horário do último dado capturado:")
+                        console.log(dados.labels[dados.labels.length - 1])
+                        console.log("---------------------------------------------------------------")
+                    }
+                    // else {
+                    //     // tirando e colocando valores no gráfico
+                    //     dados.labels.shift(); // apagar o primeiro
+                    //     dados.labels.push(novoRegistro[0].Jogador); // incluir um novo momento
+
+                    //     dados.datasets[0].data.shift();  // apagar o primeiro de umidade
+                    //     dados.datasets[0].data.push(novoRegistro[0].Jogador); // incluir uma nova medida de umidade
+
+                    //     dados.datasets[1].data.shift();  // apagar o primeiro de temperatura
+                    //     dados.datasets[1].data.push(novoRegistro[0].TotalJogador); // incluir uma nova medida de temperatura
+
+                    //     myChart.update();
+                    // }
+
+                    // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+                    proximaAtualizacao = setTimeout(() => atualizarGrafico(idAvaliacao, dados, myChart), 2000);
+                });
+            } else {
+                console.error('Nenhum dado encontrado ou erro na API');
+                // Altere aqui o valor em ms se quiser que o gráfico atualize mais rápido ou mais devagar
+                proximaAtualizacao = setTimeout(() => atualizarGrafico(idAvaliacao, dados, myChart), 2000);
+            }
+        })
+            .catch(function (error) {
+                console.error(`Erro na obtenção dos dados p/ gráfico: ${error.message}`);
+            });
+
+    }
+
+
 </script>
