login com criptografia, dashboard finalizada e inicio do quiz

--- a/sistema/site/public/avaliarJogador.html
+++ b/sistema/site/public/avaliarJogador.html
@@ -52,7 +52,7 @@
     <main class="main">
         <h1>Avalie a Temporada do seu Jogador</h1>
         <p>
-            Nessa lista irei trazer os melhores jogadores da temporada 22-23. O critério é: titulos, aparições em
+            Nessa lista irei trazer os melhores jogadores da temporada 22-23. Os critério são: titulos, aparições em
             torneios, colocações em campeonatos e prêmios individuais.
         </p>
 
