--- a/sistema/site/public/dashboard.html
+++ b/sistema/site/public/dashboard.html
@@ -52,11 +52,13 @@
     <main class="main">
         <h1>Dashboard</h1>
 
-        <div>
+        <div class="dashs">
+
             <div>
                 <h1>Quantidade total de avaliações por jogador</h1>
                 <canvas id="myChart"></canvas>
             </div>
+
 
             <div>
                 <h1>Quantidade total de votos por jogador</h1>
@@ -143,14 +145,14 @@
                 label: '',
                 data: [],
                 fill: false,
-                borderColor: 'rgb(75, 192, 192)',
                 tension: 0.1
             },
             {
                 label: 'Quantidade de Avaliações',
                 data: [],
                 fill: false,
-                borderColor: 'rgb(199, 52, 52)',
+                borderColor: 'rgb(252, 252, 252)',
+                backgroundColor: ['#fff'],
                 tension: 0.1
             }]
         };
@@ -210,8 +212,8 @@
                 label: 'Quantidade de votos',
                 data: [],
                 fill: false,
-                borderColor: 'rgb(199, 52, 52)',
-                backgroundColor: ['#b80000'],
+                borderColor: 'rgb(252, 252, 252)',
+                backgroundColor: ['#fff'],
                 tension: 0.1
             }]
         };
