--- a/sistema/site/public/sobre.html
+++ b/sistema/site/public/sobre.html
@@ -44,8 +44,9 @@
                 <p>Eu sempre fui apaixonado por carros e futebol então o jogo atraiu muito a minha atenção e não deu
                     muitas horas de jogo e já estava viciado, lembro que em 2020 ano de pandemia, só ficava em casa
                     jogando rocket league. O jogo é minha forma de se divertir, se entreter, é meu jogo favorito
-                    definitivamente, jogo faz 3 anos, tenho um carinho muito grande pelo jogo de "futebol de carrinho",
-                    até hoje eu jogo, apesar de me estressar bastante, mas eu me divirto também, consumo conteúdos de
+                    definitivamente, jogo fazem 3 anos, tenho um carinho muito grande pelo jogo de "futebol de
+                    carrinho",
+                    até hoje eu jogo quando tenho tempo, eu me divirto muito, consumo conteúdos de
                     streamers e youtubers, assisto o cenário competitivo e acompanho players profissionais. Rocket
                     league se encaixa no que eu acredito, nos valores que tenho e nas minhas paixões.</p>
             </div>
