--- a/sistema/site/public/votarJogador.html
+++ b/sistema/site/public/votarJogador.html
@@ -52,7 +52,7 @@
     <main class="main">
         <h1>Vote no seu Jogador!</h1>
         <p>
-            Nessa lista irei trazer os melhores jogadores da temporada 22-23. O critério é: titulos, aparições em
+            Nessa lista irei trazer os melhores jogadores da temporada 22-23. Os critérios são: titulos, aparições em
             torneios, colocações em campeonatos e prêmios individuais.
         </p>
 
